fixed navbar alignment

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -80,6 +80,8 @@ nav {
 	justify-content: space-around;
 	font-size: 1.25em;
 	width: 100%;
+	height: 100%;
+    margin: auto 0 0 0;
 }
 nav a {
 	color: gray;
